Version 7.0.1
-------------

    * Fixed a small bug where get_labels and has_label would return labels below a target
      marked output_is_complete, which would cause some build rules to then fail.


Version 7.0.0
-------------

    * Introduced a set of c_library, c_binary rules etc. These parallel the cc_ versions and
      share most of the implementation.
    * cctool config setting renamed to cpptool, cctool now defines the compiler used for new
      c_library etc rules. This is a breaking change.
    * Similarly defaultoptcppflags and defaultdbgcppflags introduced.
    * The defines argument to cc_library now accepts a dict of token name -> value.
    * Timeouts in .plzconfig are now given as durations instead of plain ints.
      The default is seconds but they can be suffixed with units (m, s, ms, etc).
      Interpretation of any existing values is unchanged apart from metrics.frequency which
      was inconsistently interpreted as milliseconds, and will now be interpreted as seconds
      if no unit is given. This would obviously only affect anyone who'd overridden that value.


Version 6.1.2
-------------

    * Some small fixes to Java rules
    * Fixed a bug where two filegroup rules outputting the same rule would sometimes fail
      when built simultaneously.


Version 6.1.0
-------------

    * Added a static flag to cc_binary to attempt to link it statically.
    * Fix cc_shared_object when srcs is empty.
    * Suppress gcc build ids to reduce nondetermism
    * Can now call HasLabel on an arbitrary build label, but it should be a transitive
      dependency of the currently building rule to be safe.
    * All sub-rules of a rule are rebuilt on 'plz rebuild'
    * fpm_deb and fpm_package take a 'dirs' argument allowing passing rules with multiple outputs


Version 6.0.3
-------------

    * Finally fixed cc_embed_binary for OSX


Version 6.0.2
-------------

    * Another small maven_jar fix, related to Android this time